--- a/alret.html
+++ b/alret.html
@@ -44,5 +44,14 @@ if (alertTrigger) {
     </script>
 -->
     <h1> Facebook <span class="badge bg-primary">Badge</span></h1>
+    <button class="btn btn-primary">
+      Notification<span class="badge bg-danger">10+</span>
+    </button>
+    <br><br>
+    <button class="btn btn-primary position-relative">Inbox
+      <span class="position-absolute top-0 start-100 translate-middle badge bg-danger rounded-pill">99+</span>
+   
+      
+    </button>
     </body>
     </html>
