--- a/alret.html
+++ b/alret.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
   <title> display time</title>
   <meta charset="UTF-8">
-  <meta name="viewport" content= "width=device-width, initial-scale-1.0">
+  <meta name="viewport" content="width=device-width, initial-scale-1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-  </head>
-  <body>
-    <!--Alert button
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+    crossorigin="anonymous"></script>
+</head>
+
+<body>
+  <!--Alert button
     <div class="container">
       <div class="alert alert-primary">Alert message</div>
       <div class="alert alert-secondary">Alert Message2</div>
@@ -43,6 +48,7 @@ if (alertTrigger) {
 }
     </script>
 -->
+  <!--Badge
     <h1> Facebook <span class="badge bg-primary">Badge</span></h1>
     <button class="btn btn-primary">
       Notification<span class="badge bg-danger">10+</span>
@@ -50,8 +56,14 @@ if (alertTrigger) {
     <br><br>
     <button class="btn btn-primary position-relative">Inbox
       <span class="position-absolute top-0 start-100 translate-middle badge bg-danger rounded-pill">99+</span>
-   
-      
     </button>
-    </body>
-    </html>
+    -->
+<ol class="breadcrumb">
+  <li class="breadcrumb-item"><a href="">Home</a></li>
+  <li class="breadcrumb-item"><a href="">Action</a></li>
+  <li class="breadcrumb-item"><a href="">Order</a></li>
+  <li class="breadcrumb-item active">Payment</li>
+</ol>
+</body>
+
+</html>
