--- a/alret.html
+++ b/alret.html
@@ -57,13 +57,21 @@ if (alertTrigger) {
     <button class="btn btn-primary position-relative">Inbox
       <span class="position-absolute top-0 start-100 translate-middle badge bg-danger rounded-pill">99+</span>
     </button>
-    -->
+    --><!--BreadCrumb
 <ol class="breadcrumb">
   <li class="breadcrumb-item"><a href="">Home</a></li>
   <li class="breadcrumb-item"><a href="">Action</a></li>
   <li class="breadcrumb-item"><a href="">Order</a></li>
   <li class="breadcrumb-item active">Payment</li>
 </ol>
+-->
+<div class="container">
+  <button type="button" class="btn btn-danger">Cancel</button>
+  <button type="button" class="btn btn-outline-success btn-lg">Confirm</button>
+  <button  type="button" class="btn btn-light">Edit</button>
+  <button type="button" class="btn btn-dark">Dispatch</button>
+  <button type="button" class="btn btn-warning">Coming</button>
+</div>
 </body>
 
 </html>
