--- a/alret.html
+++ b/alret.html
@@ -65,12 +65,37 @@ if (alertTrigger) {
   <li class="breadcrumb-item active">Payment</li>
 </ol>
 -->
+<!--Button Creating
 <div class="container">
   <button type="button" class="btn btn-danger">Cancel</button>
   <button type="button" class="btn btn-outline-success btn-lg">Confirm</button>
   <button  type="button" class="btn btn-light">Edit</button>
   <button type="button" class="btn btn-dark">Dispatch</button>
   <button type="button" class="btn btn-warning">Coming</button>
+</div>
+-->
+<div class="container">
+ <div class="btn-group">
+  <button class="btn btn-warning">button</button>
+  <button class="btn btn-success">Ready</button>
+  <button class="btn btn-danger">GO</button>
+ </div>
+ <br><br>
+ <div class="btn-toolbar">
+  <div class="btn-group">
+ <button class="btn btn-warning">button</button>
+  <button class="btn btn-success">Ready</button>
+  <button class="btn btn-danger">GO</button>
+  </div>
+ </div>
+ <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
+  <button class="btn btn-warning">button</button>
+  <button class="btn btn-success">Ready</button>
+  <button class="btn btn-danger">GO</button>
+  <div class="btn-group" role="group">
+    <button id="btngroupDrop1" type="button" class="btn btn-primary dropdown-toggle data-bs-toggle">Dropdown</button>
+  </div>
+ </div>
 </div>
 </body>
 
