--- a/alret.html
+++ b/alret.html
@@ -94,6 +94,10 @@ if (alertTrigger) {
   <button class="btn btn-danger">GO</button>
   <div class="btn-group" role="group">
     <button id="btngroupDrop1" type="button" class="btn btn-primary dropdown-toggle data-bs-toggle">Dropdown</button>
+    <ul class="dropdown-menu" arla-labellebdy="btnGroupDrop1">
+      <li><a class=dropdown-item" href="#">Dropdown Link</a></li>
+      <li><a class=dropdown-item" href="#">Dropdown Link</a></li>
+    </ul>
   </div>
  </div>
 </div>
