--- a/alret.html
+++ b/alret.html
@@ -11,6 +11,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
     crossorigin="anonymous"></script>
+  
 </head>
 
 <body>
@@ -103,6 +104,7 @@ if (alertTrigger) {
  </div>
 </div>
 -->
+<!--Card making
 <div class="container">
   <div class="card" style="width:18rem;">
     <img src="korea.png" alt="" class="card-img-top">
@@ -112,6 +114,26 @@ if (alertTrigger) {
     <a href="" class="btn btn-warning">Read More...</a>
     </div>
   </div>
+</div>
+-->
+<div class="carousel slide" id="CarouseID" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="korea.png" alt="" class="d-block w-100">
+    </div>
+     <div class="carousel-item ">
+      <img src="favicon.png" alt="" class="d-block w-100">
+    </div> 
+    <div class="carousel-item ">
+      <img src="korea.png" alt="" class="d-block w-100">
+    </div>
+  </div>
+  <button class="carousel-control-prev" data-bs-target="#carouselID" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon"></span>
+  </button>
+  <button class="carousel-control-next" data-bs-target="#carouselID" data-bs-slide="next">
+    <span class="carousel-control-next-icon"></span>
+  </button>
 </div>
 </body>
 
