--- a/alret.html
+++ b/alret.html
@@ -11,6 +11,12 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
     crossorigin="anonymous"></script>
+    <style>
+      img{
+        height:700px;
+        width: 500px;
+      }
+    </style>
   
 </head>
 
@@ -125,7 +131,7 @@ if (alertTrigger) {
       <img src="favicon.png" alt="" class="d-block w-100">
     </div> 
     <div class="carousel-item ">
-      <img src="korea.png" alt="" class="d-block w-100">
+      <img src="ffavicon.png" alt="" class="d-block w-100">
     </div>
   </div>
   <button class="carousel-control-prev" data-bs-target="#carouselID" data-bs-slide="prev">
