--- a/buttton clearfix.html
+++ b/buttton clearfix.html
@@ -71,5 +71,15 @@ visually hidden
     </div>
     -->
     
+    <p>
+      <button class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#collapseID">
+        Collapse
+      </button>
+      <div style="min-height: 120px;">
+        <div class="collapse collapse-horizontal" id="collapseID" style="width:130px;">
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem adipisci eveniet dolor recusandae at amet laudantium sunt suscipit ab ea.</p>
+        </div>
+      </div>
+    </p>
   </body>
   </html>
