--- a/buttton clearfix.html
+++ b/buttton clearfix.html
@@ -70,7 +70,7 @@ visually hidden
     
     </div>
     -->
-    
+    <!--Collapse
     <p>
       <button class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#collapseID">
         Collapse
@@ -81,5 +81,37 @@ visually hidden
         </div>
       </div>
     </p>
+    -->
+    <!--Dropdown Element
+    <div class="Dropdown">
+      <button class="btn btn-outline-danger dropdown-toggle" data-bs-toggle="dropdown">Click me</button>
+      <ul class="dropodwn-menu">
+        <li> <a href="" class="dropdown-item">Home</a></li>
+        <li> <a href="" class="dropdown-item">Adress</a></li>
+        <li> <a href="" class="dropdown-item">House</a></li>
+        <li> <a href="" class="dropdown-item">Name</a></li>
+      </ul>
+    </div>
+    -->
+    <!--popup button
+    <button class="btn btn-primary" data-bs-target="#modalID" data-bs-toggle="modal">popup Button</button>
+    <div class="modal fade" id= "modalID">
+      <div class="modal-dialog">
+        <div class="modal-content">
+<div class="modal-header">
+  <h3 class="modal-title">Modal Heading Title</h3>
+  <button class="btn-close" data-bs-dismiss="modal"></button>
+</div>
+<div class="modal-body">
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit voluptate consequatur quibusdam deserunt, consectetur facilis soluta laborum fugiat repudiandae consequuntur?</p>
+</div>
+<div class="modal-footer">
+  <button class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+  <button class="btn btn-primary">Save & Changes</button>
+</div>
+        </div>
+      </div>
+    </div>
+  -->
   </body>
   </html>
