--- a/buttton clearfix.html
+++ b/buttton clearfix.html
@@ -113,5 +113,17 @@ visually hidden
       </div>
     </div>
   -->
+    <ul class="nav ">
+      <li class="nav-item">
+        <a href="" class="nav-link active">Home</a>
+      </li>
+      <li class="nav-item">
+        <a href="" class="nav-link ">Contact</a>
+      </li>
+      <li class="nav-item">
+        <a href="" class="nav-link disabled">Disabled</a>
+      </li>
+
+    </ul>
   </body>
   </html>
