--- a/buttton clearfix.html
+++ b/buttton clearfix.html
@@ -125,5 +125,17 @@ visually hidden
       </li>
 
     </ul>
+     <ul class="nav nav-tabs">
+      <li class="nav-item">
+        <a href="" class="nav-link active">Home</a>
+      </li>
+      <li class="nav-item">
+        <a href="" class="nav-link ">Contact</a>
+      </li>
+      <li class="nav-item">
+        <a href="" class="nav-link disabled">Disabled</a>
+      </li>
+
+    </ul>
   </body>
   </html>
