--- a/buttton clearfix.html
+++ b/buttton clearfix.html
@@ -113,6 +113,7 @@ visually hidden
       </div>
     </div>
   -->
+    <!--nav&tabs&Pills
     <ul class="nav ">
       <li class="nav-item">
         <a href="" class="nav-link active">Home</a>
@@ -137,5 +138,29 @@ visually hidden
       </li>
 
     </ul>
+         <ul class="nav nav-pills">
+      <li class="nav-item">
+        <a href="" class="nav-link ">Home</a>
+      </li>
+      <li class="nav-item">
+        <a href="" class="nav-link ">Contact</a>
+      </li>
+      <li class="nav-item">
+        <a href="" class="nav-link disabled">Disabled</a>
+      </li>
+
+    </ul>
+  -->
+    <nav calss="navbar navbar-expand-md navbar-loght bg-light">
+      <div class="container-fluid">
+        <a href="" calss="navbar-brand">Logo</a>
+        <button calss="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#">
+          <span calss="navbar-toggler-icon"></span>
+        </button>
+        <div calss="collapse navbar-collapse" id="NavId">
+          
+        </div>
+      </div>
+    </nav>
   </body>
   </html>
