--- a/bootstrap3.html
+++ b/bootstrap3.html
@@ -11,7 +11,7 @@
   <style>
     body {
       font-family: 'poppins', sans-serif;
-      background: linear-gradient(to right, #ffffff, #f8f0ff, #e6f3f9);
+      background: linear-gradient(to right, hsl(0, 100%, 89%), #f8f0ff, #cff0ff);
     }
 
     .navbar {
@@ -73,6 +73,11 @@
     .stats-box h4{
       font-weight: 700;
     }
+    strong{
+      text-decoration: underline;
+      text-decoration-color: blue;
+    }
+    
   </style>
 </head>
 
@@ -103,7 +108,7 @@
         <div class="col-md-6">
           <h2 class="fw-bold">Hello, I'm</h2>
           <h1 class="fw-bold mb-3">Md. Tauhid Islam</h1>
-          <p> I'm a Full-Stack <strong>ASP .NET & Angular Developer</strong>and<strong> Freelancer</strong>based in
+          <p> I'm a Full-Stack <strong>ASP .NET & Angular Developer </strong> and<strong> Freelancer</strong> based in
             Dhaka, Bangladesh.
             I strive to build immersive and beautiful web applications through carefully crafted code and user-centric
             design.
