--- a/offcanvas.html
+++ b/offcanvas.html
@@ -13,15 +13,15 @@
     crossorigin="anonymous"></script>
 </head>
 <body>
-  <button class="btn btn-primary" data-bs-toggle data-bs-target="#offcanvasID">Click Me!</button>
-  <div class="offcanvas offcanvas-top" id="offcanvasID">
+  <button class="btn btn-primary" data-bs-toggle="offcanvas" data-bs-target="#offcanvasID">Click Me!</button>
+  <div class="offcanvas offcanvas-top" id="offCanvasID">
     <div class="offcanvas-header">
       <h5>offcanvas header</h5>
       <button class="btn-close text-reset" data-bs-dismiss="offcanvas"></button>
     </div>
-    </div>
+    
     <div class="offcanvas-body">
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor necessitatibus atque rem obcaecati dignissimos omnis eligendi illo et, eveniet vero.</p>
-    
+    </div>
   </div>
 </body>
