--- a/bootstrap3.html
+++ b/bootstrap3.html
@@ -1,41 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF=8">
-  <meta name="viewport" content="width=device-width initial-scale=1.0">
-  </met>
-  <title>Tawhid Portfolio</title>
+  <meta name="viewport" content="width=device-width initial-scale=1.0"></meta>
+  <title>Tawhid Portfolio for Assignment-3 using HTML, CSS, Bootstrap</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     body {
       font-family: 'poppins', sans-serif;
-      background: linear-gradient(to right, hsl(0, 100%, 89%), #f8f0ff, #cff0ff);
+      background: linear-gradient(to right, #ffc7c7, #f8f0ff, #cff0ff);
     }
-
     .navbar {
       padding: 10px 5px;
     }
-
     .navbar-brand {
       font-weight: 1000;
       font-size: 2rem;
     }
-
     .nav-link {
       font-weight: 500;
       color: black;
       margin-right: 20px;
     }
-
     .nav-link.active {
       color: #ffffff !important;
       background: #056c0c;
       border-radius: 5px;
       padding: 8px 16px;
     }
-
     .btn-primary {
       background-color: #ea05ff;
       border: 1px solid black;
@@ -43,44 +36,38 @@
       border-radius: 6px;
       transition: 0.3;
     }
-
     .btn-primary:hover {
       background-color: #fff705;
       color: black !important;
       border: 2px solid red;
     }
-
     .Actor {
       padding: 100px 0;
     }
-
     .Actor h1 {
       font-weight: 700;
       font-size: 2.8rem;
     }
-
     .Actor p {
       color: #555;
       font-size: 1.1rem;
       max-width: 600px;
     }
-    .stats-box{
-      background:#e6f7ff;
+    .stats-box {
+      background: #e6f7ff;
       border-radius: 10px;
       padding: 25px;
       text-align: center;
     }
-    .stats-box h4{
+    .stats-box h4 {
       font-weight: 700;
     }
-    strong{
+    strong {
       text-decoration: underline;
       text-decoration-color: blue;
     }
-    
   </style>
 </head>
-
 <body>
   <nav class="navbar navbar-expand-lg lg-white shadow-sm">
     <div class="container">
@@ -114,7 +101,7 @@
             design.
           </p>
           <a href="#" class="btn btn-primary mt-3">Say Hello!</a>
-        <div class="row mt-5">
+          <div class="row mt-5">
             <div class="col-4">
               <div class="stats-box">
                 <h4>1.5 Y.</h4>
@@ -141,7 +128,5 @@
       </div>
     </div>
   </section>
-
 </body>
-
 </html>
