--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           </div>
         </div>
         <div class="col-md-6 text-center">
-          <img src="Tawhid1.jpg" alt="Md. Tauhid Islam" class="img-fluid rounded-4 shadow" style="max-width: 400px;">
+          <img src="Tawhid.jpg" alt="Md. Tauhid Islam" class="img-fluid rounded-4 shadow" style="max-width: 400px;">
         </div>
       </div>
     </div>
