--- a/java script/button.html
+++ b/java script/button.html
@@ -15,7 +15,10 @@
     <label for="">Name</label>
     <input type="text" placeholder="Enter your Name">
     <label for="">Email</label>
-    <input type="email" placeholder="Enter youremail"
+    <input type="email" placeholder="Enter your email">
+    <label from=""> Message</label>
+    <textarea placeholder="Enter your message"></textarea>
+    <input type="submit" value="send message">
   </from>
  <!-- <button id="like"><i class="fa-solid fa-thumbs-up"></i>Like</button>
   <script src="button.js"></script> -->
