--- a/java script/index.html
+++ b/java script/index.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-  </head>
-  <body>
-       <h1 id=title"></h1>
-    <script src="first.js"></script>
- 
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" src="style.css">
+</head>
+<body>
+  <div class="box">I love You!</div>
+  <div id="box">Hello Bd</div>
+  <div>
+    <h1>WelCome</h1>
+    <p>Lorem, ipsum dolor.</p>
+  </div>
+  <div >
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </div>
+  <script src="script.js"></script>
+</body>
 </html>
