--- a/java script/index.html
+++ b/java script/index.html
@@ -15,7 +15,7 @@
   </div>
   <div >
     <ul>
-      <li><a href="#">Home</a></li>
+      <li class="nav-link"><a href="#">Home</a></li>
       <li><a href="#">About</a></li>
       <li><a href="#">Contact</a></li>
     </ul>
