--- a/Assignment LogIn Page/index.html
+++ b/Assignment LogIn Page/index.html
@@ -3,60 +3,45 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login Page – SportsHub</title>
-
-  <!-- Bootstrap CSS -->
+  <title>Login Page - SportsHub</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
   <div class="login-box">
     <h3>SportsHub LogIn</h3>
-
     <div id="alertBox"></div>
-
     <form id="loginForm">
       <div class="mb-3">
         <label for="" class="form-label">Username</label>
         <input type="text" id="username" class="form-control" placeholder="Enter username" required>
       </div>
-
-      <div class="mb-3">
+        <div class="mb-3">
         <label for="" class="form-label">Password</label>
         <input type="password" id="password" class="form-control" placeholder="Enter password" required>
       </div>
-
       <button type="submit" class="btn btn-primary w-100">Login</button>
     </form>
-
   </div>
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-
   <script>
     document.getElementById("loginForm").addEventListener("submit", function(e) {
       e.preventDefault();
-
       const username = document.getElementById("username").value.trim();
       const password = document.getElementById("password").value.trim();
       const alertBox = document.getElementById("alertBox");
-
       fetch("users.json")
         .then(response => response.json())
         .then(users => {
           const matchedUser = users.find(user => user.username === username && user.password === password);
-
           if (matchedUser) {
             alertBox.innerHTML = `
               <div class="alert alert-success">Login Successful! </div>
             `;
-
             setTimeout(() => {
               window.location.href = "dashboard.html";
             }, 1500);
-
           } else {
             alertBox.innerHTML = `
               <div class="alert alert-danger">Invalid username or password!</div>
@@ -70,6 +55,5 @@
         });
     });
   </script>
-
 </body>
 </html>
